opam-version: "2.0"
depends: [
  "dune" {>= "3.1"}
  "ocaml" {>= "5.0"}
  "odoc" {with-doc}
  "core"
  "core_unix"
  "incremental"
  "ppx_jane"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
